--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
     "@typescript-eslint/parser": "^4.1.0",
+    "class-validator": "^0.12.2",
     "eslint": "^7.8.1",
+    "reflect-metadata": "^0.1.13",
     "ts-node-dev": "^1.0.0-pre.62",
+    "type-graphql": "^1.0.0",
     "typescript": "^4.0.2"
   },
   "dependencies": {
