--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/graphql": "^14.5.0",
+    "@types/mongoose": "^5.7.36",
     "@types/node": "^14.10.0",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
@@ -25,7 +26,9 @@
   },
   "dependencies": {
     "apollo-server": "^2.17.0",
+    "dotenv": "^8.2.0",
     "graphql": "^15.3.0",
+    "mongoose": "^5.10.5",
     "uuid": "^8.3.0"
   }
 }
