--- a/package.json
+++ b/package.json
@@ -17,11 +17,8 @@
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
     "@typescript-eslint/parser": "^4.1.0",
-    "class-validator": "^0.12.2",
     "eslint": "^7.8.1",
-    "reflect-metadata": "^0.1.13",
     "ts-node-dev": "^1.0.0-pre.62",
-    "type-graphql": "^1.0.0",
     "typescript": "^4.0.2"
   },
   "dependencies": {
@@ -29,6 +26,8 @@
     "dotenv": "^8.2.0",
     "graphql": "^15.3.0",
     "mongoose": "^5.10.5",
+    "reflect-metadata": "^0.1.13",
+    "typedi": "^0.8.0",
     "uuid": "^8.3.0"
   }
 }
