--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "juhanir",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/graphql": "^14.5.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.36",
     "@types/node": "^14.10.0",
     "@types/uuid": "^8.3.0",
@@ -23,8 +25,10 @@
   },
   "dependencies": {
     "apollo-server": "^2.17.0",
+    "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "graphql": "^15.3.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.5",
     "reflect-metadata": "^0.1.13",
     "typedi": "^0.8.0",
