--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start:dev": "ts-node-dev src/index.ts",
+    "start:dev": "NODE_ENV=development ts-node-dev src/index.ts",
     "tsc": "tsc",
     "lint": "eslint --ext .ts ./src",
-    "test": "jest --runInBand --detectOpenHandles --colors --verbose"
+    "test": "NODE_ENV=test jest --runInBand --detectOpenHandles --colors --verbose"
   },
   "author": "juhanir",
   "license": "ISC",
@@ -20,7 +20,9 @@
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
     "@typescript-eslint/parser": "^4.1.0",
+    "apollo-server-testing": "^2.18.0",
     "eslint": "^7.8.1",
+    "eslint-plugin-jest": "^24.0.2",
     "jest": "^26.4.2",
     "jest-junit": "^11.1.0",
     "ts-jest": "^26.4.0",
