--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
+  "engines": { "node": ">=12.18.4", "npm": ">=6.14.6" },
   "scripts": {
     "start:dev": "NODE_ENV=development ts-node-dev src/index.ts",
+    "start": "tsc && NODE_ENV=production node build/src/index.js",
     "tsc": "tsc",
     "lint": "eslint --ext .ts ./src",
     "test": "NODE_ENV=test jest --runInBand --detectOpenHandles --colors --verbose"
