--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
-  "engines": { "node": ">=12.18.4", "npm": ">=6.14.6" },
+  "engines": { "node": "=12.18.4", "npm": "=6.14.6" },
   "scripts": {
     "start:dev": "NODE_ENV=development ts-node-dev src/index.ts",
     "start": "tsc && NODE_ENV=production node build/src/index.js",
