--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "jest": "^26.4.2",
     "jest-junit": "^11.1.0",
     "ts-jest": "^26.4.0",
-    "ts-node-dev": "^1.0.0-pre.62",
-    "typescript": "^4.0.2"
+    "ts-node-dev": "^1.0.0-pre.62"
   },
   "dependencies": {
+    "typescript": "^4.0.2",
     "apollo-server": "^2.17.0",
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
