--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
-  "engines": { "node": "=12.18.4", "npm": "=6.14.6" },
+  "engines": {
+    "node": "12.18.4",
+    "npm": "6.14.6"
+  },
   "scripts": {
     "start:dev": "NODE_ENV=development ts-node-dev src/index.ts",
     "start": "tsc && NODE_ENV=production node build/src/index.js",
@@ -14,14 +17,6 @@
   "author": "juhanir",
   "license": "ISC",
   "devDependencies": {
-    "@types/bcrypt": "^3.0.0",
-    "@types/graphql": "^14.5.0",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/mongoose": "^5.7.36",
-    "@types/node": "^14.10.0",
-    "@types/uuid": "^8.3.0",
-    "@typescript-eslint/eslint-plugin": "^4.1.0",
-    "@typescript-eslint/parser": "^4.1.0",
     "apollo-server-testing": "^2.18.0",
     "eslint": "^7.8.1",
     "eslint-plugin-jest": "^24.0.2",
@@ -31,6 +26,14 @@
     "ts-node-dev": "^1.0.0-pre.62"
   },
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/graphql": "^14.5.0",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongoose": "^5.7.36",
+    "@types/node": "^14.10.0",
+    "@types/uuid": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.1.0",
+    "@typescript-eslint/parser": "^4.1.0",
     "typescript": "^4.0.2",
     "apollo-server": "^2.17.0",
     "bcrypt": "^5.0.0",
