--- a/package.json
+++ b/package.json
@@ -16,16 +16,14 @@
   },
   "author": "juhanir",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "apollo-server-testing": "^2.18.0",
     "eslint": "^7.8.1",
     "eslint-plugin-jest": "^24.0.2",
     "jest": "^26.4.2",
     "jest-junit": "^11.1.0",
     "ts-jest": "^26.4.0",
-    "ts-node-dev": "^1.0.0-pre.62"
-  },
-  "dependencies": {
+    "ts-node-dev": "^1.0.0-pre.62",
     "@types/bcrypt": "^3.0.0",
     "@types/graphql": "^14.5.0",
     "@types/jsonwebtoken": "^8.5.0",
