--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "tsc && NODE_ENV=production node build/src/index.js",
     "tsc": "tsc",
     "lint": "eslint --ext .ts ./src",
+    "prettify": "npx prettier --write ./src ./tests",
     "test": "NODE_ENV=test jest --runInBand --detectOpenHandles --colors --verbose"
   },
   "author": "juhanir",
@@ -42,5 +43,9 @@
     "reflect-metadata": "^0.1.13",
     "typedi": "^0.8.0",
     "uuid": "^8.3.0"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^6.12.0",
+    "prettier": "2.1.2"
   }
 }
