--- a/.eslintrc
+++ b/.eslintrc
@@ -11,15 +11,14 @@
     "es6": true
   },
   "rules": {
-    "@typescript-eslint/semi": ["error"],
     "@typescript-eslint/explicit-function-return-type": 0,
     "no-trailing-spaces": "error",
     "@typescript-eslint/no-unused-vars": [
-        "warn", { "argsIgnorePattern": "^_" }
+      "warn",
+      { "argsIgnorePattern": "^_" }
     ],
-     "@typescript-eslint/no-explicit-any": 1,
-    "no-case-declarations": 0,
-    "quotes": ["warn", "single"]
+    "@typescript-eslint/no-explicit-any": 1,
+    "no-case-declarations": 0
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
