--- a/package.json
+++ b/package.json
@@ -19,34 +19,34 @@
   "author": "juhanir",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-testing": "^2.18.0",
-    "eslint": "^7.8.1",
-    "eslint-plugin-jest": "^24.0.2",
-    "jest": "^26.4.2",
-    "jest-junit": "^11.1.0",
-    "ts-jest": "^26.4.0",
-    "ts-node-dev": "^1.0.0-pre.62",
-    "@types/bcrypt": "^3.0.0",
-    "@types/graphql": "^14.5.0",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/mongoose": "^5.7.36",
-    "@types/node": "^14.10.0",
-    "@types/uuid": "^8.3.0",
-    "@typescript-eslint/eslint-plugin": "^4.1.0",
-    "@typescript-eslint/parser": "^4.1.0",
-    "typescript": "^4.0.2",
-    "apollo-server": "^2.17.0",
-    "bcrypt": "^5.0.0",
-    "dotenv": "^8.2.0",
-    "graphql": "^15.3.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.5",
-    "reflect-metadata": "^0.1.13",
-    "typedi": "^0.8.0",
-    "uuid": "^8.3.0"
+    "@types/bcrypt": "3.0.0",
+    "@types/graphql": "14.5.0",
+    "@types/jsonwebtoken": "8.5.0",
+    "@types/mongoose": "5.7.36",
+    "@types/node": "14.10.0",
+    "@types/uuid": "8.3.0",
+    "@typescript-eslint/eslint-plugin": "4.3.0",
+    "@typescript-eslint/parser": "4.3.0",
+    "apollo-server": "2.18.1",
+    "apollo-server-testing": "2.18.1",
+    "bcrypt": "5.0.0",
+    "dotenv": "8.2.0",
+    "eslint": "7.10.0",
+    "eslint-plugin-jest": "24.0.2",
+    "graphql": "15.3.0",
+    "jest": "26.4.2",
+    "jest-junit": "11.1.0",
+    "jsonwebtoken": "8.5.1",
+    "mongoose": "5.10.7",
+    "reflect-metadata": "0.1.13",
+    "ts-jest": "26.4.1",
+    "ts-node-dev": "1.0.0-pre.62",
+    "typedi": "0.8.0",
+    "typescript": "4.0.2",
+    "uuid": "8.3.0"
   },
   "devDependencies": {
-    "eslint-config-prettier": "^6.12.0",
+    "eslint-config-prettier": "6.12.0",
     "prettier": "2.1.2"
   }
 }
